# oracle

./: .env.example  .gitignore  Oracle.md  config.py  ingestion.py  macro.py  main.py  memory.py  pyproject.toml  research.py  setup.sql  synthesis.py  telegram_bot.py
