[project]
name = "oracle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.109.1",
    "apscheduler>=3.11.2",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "pytz>=2026.2",
    "supabase>=2.31.0",
    "yfinance>=1.4.1",
]
